Fix spacing in responsive

--- a/src/assets/scss/layout/_wrapper.scss
+++ b/src/assets/scss/layout/_wrapper.scss
@@ -14,6 +14,7 @@
 		));
 		padding-top: 74px;
 		display: flex;
+	  position: relative;
 		flex-flow: column;
 
 		&.is-transitioning {
